# AI-Driven-SDLC

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  claude.md  docker-compose.prod.yml  docker-compose.yml  mcp-smoke-test.txt  pyproject.toml  test_insure.db
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
agents/: README.md  __init__.py  base_agent.py  dev_be_agent.md  dev_be_agent.py  dev_fe_agent.md  dev_fe_agent.py  devops_agent.md  devops_agent.py  pm_agent.md  pm_agent.py  qa_agent.md  qa_agent.py  scrum_agent.md  scrum_agent.py  techlead_agent.md  techlead_agent.py
backend/: Dockerfile  admin_policy_schemas.py  auth.py  config.py  dashboard_schemas.py  database.py  deps.py  main.py  models.py  policy_schemas.py  requirements.txt  risk_rule_schemas.py  schemas.py
backend/models/: auth.py  claims.py  document.py  notification.py  policy.py  quoting.py  (+1 more)
cli/: __init__.py  chat.py  cli.md
deploy/: .env.example  nginx.conf
docs/: INSTRUCTION_MODE.md  TUTORIAL.md
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
mcp/: __init__.py  mcp.md  mcp_server.py
memory/: architecture.md  constitution.md  decisions.md  plan.md  requirements.md  tasks.md  test_cases.md  user_stories.md
orchestrator/: __init__.py  agent_enhancer.py  main.py  models.py  orchestrator.md  pipeline.py  router.py  scheduler.py  state_manager.py  workflow_engine.py
skills/: common_fe_be_skill_contract.md
tests/: conftest.py  test_admin_policies.py  test_claims_dashboard.py  test_risk_rules.py
(+95 files in other folders)
